# terminake

./: .gitignore  README.md  pyproject.toml
src/terminake/: example.py  main.py
src/terminake/entities/: __init__.py  snake.py
src/terminake/entities/food/: __init__.py  banana.py  base.py  bomb.py  coffee.py  strawberry.py
src/terminake/game/: __init__.py  game_context.py  game_manager.py
src/terminake/states/: __init__.py  base_state.py  game_state.py  menu_state.py  pause_state.py  score_state.py
